force-app/main/default/objects/Jira_Comment__c/Jira_Comment__c.object-meta.xml
<CustomObject>
    <label>Jira Comment</label>
    <nameField>
        <displayFormat>JC-{000000}</displayFormat>
        <label>Jira Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>