force-app/main/default/objects/Jira_Comment__c/fields/Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>Mod_Date__c</fullName>
    <formula>TEXT( DAY(  DATEVALUE(LastModifiedDate) ) )+&apos;/&apos;+TEXT( MONTH( DATEVALUE(LastModifiedDate)   ) )+&apos;/&apos;+TEXT( YEAR(  DATEVALUE(LastModifiedDate)  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mod Date</label>
    <type>Text</type>
</CustomField>