force-app/main/default/objects/Jira_Comment__c/fields/Sprint_Element__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Element__c</fullName>
    <label>Sprint Element</label>
    <referenceTo>Sprint_Element__c</referenceTo>
    <relationshipLabel>Jira Comments</relationshipLabel>
    <relationshipName>Jira_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>